provision-fields: new Controller endpoints (to be used by the portal), changes to make things more forgiving (using TLSP's setup as an ex)